[package]
name = "treasury-factory"
version = "0.1.1"
authors = ["OrbitCDP <support@orbitcdp.finance>"]
edition = "2021"
publish = false


[lib]
crate-type = ["cdylib"]
doctest = false

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }


[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
sep-41-token = { workspace = true, features = ["testutils"] }
rand = {version = "0.7.3"}